6/19/12 Added mathematics-related classes: Optimization1D for one-dimensional function minimization, and double-versions of the very useful Ray and Plane classes used in 3D sims.
6/12/12 Added DampedMassSpringSystem for solving second-order linear differential equations (which is the same as a damped spring system)
6/10/12 Added "subtract" method to IntegerProperty
5/29/12 #3166 removed check for -sponsorPrototype command line arg, presence of sponsor.properties alone will trigger feature
5/29/12 #3166 i18n of sponsor feature
5/8/2012 #3326 Converted from InternalError to HeadlessException in catch block
5/8/2012 #3326 Provide headless support for FrameSetup so that it can be created without crashing the build process on Ubuntu
5/3/2012 #3320 Fixed: equality test is incorrect for ObservableList
4/12/12 #3303 replace Java 1.6 calls with Java 1.5 workaround to implement nearest-neighbor rounding in DefaultDecimalFormat
4/12/12 #3304 Fixed: Exception when attempting to authenticate mongodb when there is no internet connection, resolves #3304
4/2/12 Added convenience method Pairs.pair so pairs can be constructed with "pair(a,b)" instead of "new Pair<MyLongTypeNameForTypeA,MyLongTypeNameForTypeB>(a,b)"
4/2/12 Added Clock.addSimulationTimeChangeListener
3/23/12 #3260 Changed replacement to "\\t" so it will render as "\t" with no tab
3/23/12 #3260 Factored out null string in Parameter, use "\\\\t" as replacement for "\t", added test main
3/21/12 #3225 renamed ParameterSet.add => ParameterSet.with
3/21/12 #3229 Removed WhatIsMountainTime and WhatIsMyIPAddress
3/21/12 #3260 Verify that no delimiters appear in sim sharing parameters
3/19/12 #3204 eliminated stray "textFieldCommitted" message that was occurring in RPAL Game
3/13/12 #3285 add support for testing if sim-sharing is running with a specific configuration
3/13/12 #3283, sim-sharing fixes for spinners
3/13/12 #3284 add Parameter(IParameterKey, IParameterValue) constructor